# mokkan-core

./: .codacy_dummy  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.codacy/: codacy.yaml
.github/: copilot-instructions.md
.github/instructions/: codacy.instructions.md
.github/workflows/: redis-integration.yml  security-audit.yml  sql-sanity.yml
data/: dev.db
docs/: openid-authorization.md  redis-integration.md  security-advisories.md
migrations/: 0001_create_tables.sql  0002_add_published_at.sql  0003_add_full_text_search.sql  0004_create_article_revisions.sql  0005_create_audit_logs.sql
scripts/: check_sql_patterns.sh
spec/: openapi.json
src/: async_support.rs  config.rs  lib.rs  main.rs
src/application/: dto.rs  error.rs  mod.rs  random_id.rs
src/application/commands/: articles.rs  mod.rs  users.rs
src/application/dto/: articles.rs  audit.rs  auth.rs  mod.rs  pagination.rs  serde_time.rs  sessions.rs  users.rs
src/application/ports/: authorization_code.rs  mod.rs  refresh_token.rs  security.rs  session_revocation.rs  time.rs  util.rs
src/application/queries/: articles.rs  audit.rs  mod.rs  users.rs
src/application/services/: auth.rs  mod.rs  session.rs
src/domain/: article.rs  errors.rs  mod.rs  user.rs
src/domain/article/: entity.rs  events.rs  mod.rs  repository.rs  revision.rs  services.rs  specifications.rs  value_objects.rs
src/domain/audit/: cursor.rs  cursor_tests.rs  entity.rs  mod.rs  repository.rs
src/domain/user/: entity.rs  mod.rs  repository.rs  specifications.rs  (+1 more)
src/infrastructure/: database.rs  mod.rs  time.rs  util.rs
src/presentation/: mod.rs
tests/: audit_query_tests.rs  e2e_auth_and_cursor.rs  e2e_auth_cache.rs  e2e_authorize_flow.rs  e2e_error_statuses.rs  e2e_evalsha_path.rs  e2e_http.rs  e2e_logout.rs  e2e_openid.rs  e2e_rbac.rs  e2e_refresh_reuse.rs  e2e_refresh_reuse_redis.rs  e2e_refresh_rotation.rs  e2e_refresh_rotation_redis.rs  e2e_sessions.rs  e2e_token_version_revocation.rs  integration_audit.rs  openapi_integration.rs  user_command_service_unit.rs
tests/support/: builders.rs  helpers.rs  mocks.rs  mod.rs
(+88 files in other folders)
