[package]
name = "rust_cms_nw"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["password-hash"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
anyhow = "1.0"
biscuit-auth = "6.0.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
headers = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate"] }
thiserror = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
